--- a/books/templates/books/book_list.html
+++ b/books/templates/books/book_list.html
@@ -1,7 +1,8 @@
 {% load static %}
 <html>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 
 
@@ -15,15 +16,18 @@
                 {% csrf_token %}
                 <div class="" style="width: 200px" align="center">
                     <label for="title">Title:</label><br>
-                    <input type="text" name="title" id="title" class="form-" style="" placeholder="Search by title" value="{{ title_searched }}">
+                    <input type="text" name="title" id="title"
+                           placeholder="Search by title" value="{{ title_searched }}">
                 </div>
                 <div class="" style="width: 200px" align="center">
                     <label for="author">Author:</label><br>
-                    <input type="text" name="author" id="author" class="" style="" placeholder="Search by author" value="{{ author_searched }}">
+                    <input type="text" name="author" id="author"
+                           placeholder="Search by author" value="{{ author_searched }}">
                 </div>
                 <div class="" style="width: 200px" align="center">
                     <label for="language">Language:</label><br>
-                    <input type="text" name="language" id="language" class="" style="" placeholder="Search by language" value="{{ language_searched }}">
+                    <input type="text" name="language" id="language"
+                           placeholder="Search by language" value="{{ language_searched }}">
                 </div>
 
                 <input type="submit" style="visibility: hidden;">
