--- a/books/templates/books/book_list.html
+++ b/books/templates/books/book_list.html
@@ -7,12 +7,14 @@
 
 
     <body>
-            <form
-                    hx-post="{% url 'search' %}"
-                    hx-target="#search_results"
-                    hx-swap="outerHTML"
-                    hx-trigger="submit, input delay:500ms"
-                    id="search" name="search" class="mt-5 ml-5 d-flex align-content flex-wrap">
+            <form autocomplete="off"
+                  class="mt-5 ml-5 d-flex align-content flex-wrap"
+                  id="search" name="search"
+                  hx-post="{% url 'search' %}"
+                  hx-target="#search_results"
+                  hx-swap="outerHTML"
+                  hx-trigger="submit, input delay:500ms"
+            >
                 {% csrf_token %}
                 <div class="" style="width: 200px" align="center">
                     <label for="title">Title:</label><br>
