--- a/books/templates/books/book_list.html
+++ b/books/templates/books/book_list.html
@@ -1,10 +1,13 @@
 {% load static %}
 <html>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 
+    <!-- main CSS -->
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 
     <body>
             <form autocomplete="off"
