--- a/books/templates/books/search_results.html
+++ b/books/templates/books/search_results.html
@@ -2,12 +2,12 @@
 
 <div id="search_results" align="center" class="col-md-12 d-flex align-content flex-wrap">
 {% for book in books %}
-    <div class="mr-3 mt-3 ml-3 d-flex" style="width: 300px; background-color: lightgrey">
+    <div class="mt-3 ml-2 d-flex book-container">
         <div>
 {% if book.cover_link %}
     <img height="150" src="{{ book.cover_link }}" style="border: 1px solid;">
 {% else %}
-    <img height="150" width="100" src="{% static 'book_404.jpg' %}" style="border: 1px solid; opacity: 0.5;">
+    <img height="150" width="100" src="{% static 'images/book_404.jpg' %}" style="border: 1px solid; opacity: 0.5;">
 {% endif %}
         </div>
         <div class="ml-2" style="font-size: 14px; width: 100%;">
@@ -23,8 +23,8 @@
     </div>
 
 {% empty %}
-    <div class="mr-5 mt-5 ml-5 d-flex" style="width: 300px"><div><img height="150"
-                                                          src="{% static 'book_404.jpg' %}"
+    <div class="ml-5 mt-3 d-flex" style="width: 300px"><div><img height="150"
+                                                          src="{% static 'images/book_404.jpg' %}"
                                                           style="border: 1px solid;"></div>
 
         <div>There is no book in the database with such search criteria.</div></div>
