--- a/books/templates/books/search_results.html
+++ b/books/templates/books/search_results.html
@@ -1,8 +1,10 @@
+{% extends 'books/base.html' %}
 {% load static %}
+{% block content %}
 
 <div id="search_results" align="center" class="col-md-12 d-flex align-content flex-wrap">
 {% for book in books %}
-    <a href="#">
+    <a href="{% url 'book-update' book.id %}">
     <div class="mt-3 ml-2 d-flex book-container">
         <div>
         {% if book.cover_link %}
@@ -34,3 +36,4 @@
         </div>
     {% endfor %}
 </div>
+{% endblock content %}
