--- a/books/templates/books/search_results.html
+++ b/books/templates/books/search_results.html
@@ -2,29 +2,15 @@
 {% load static %}
 {% block content %}
 
+
 <div id="search_results" align="center" class="col-md-12 d-flex align-content flex-wrap">
-{% for book in books %}
-    <a href="{% url 'book-update' book.id %}">
-    <div class="mt-3 ml-2 d-flex book-container">
-        <div>
-        {% if book.cover_link %}
-            <img height="150" width="100" src="{{ book.cover_link }}" class="book-picture">
-        {% else %}
-            <img height="150" width="100" src="{% static 'images/book_404.jpg' %}" class="semitransparent">
-        {% endif %}
-        </div>
-        <div class="ml-2 book-details">
-            <b>{{ book.title }}</b>
-            <ul class="clean-list">
-                <li>{{ book.author }}</li>
-                <li>Language: {% if book.language %}{{ book.language }}{% else %}--{% endif %}</li>
-                <li>Date: {% if book.pub_date %}{{ book.pub_date }}{% else %}--{% endif %}</li>
-                <li>Pages: {% if book.page_count %}{{ book.page_count }}{% else %}--{% endif %}</li>
-                <li>ISBN: {% if book.isbn %}{{ book.isbn }}{% else %}--{% endif %}</li>
-            </ul>
-        </div>
-    </div>
-    </a>
+
+    {% for book in books %}
+
+        {% with add_book_link='True' %}
+            {% include 'books/book_segment.html' %}
+        {% endwith %}
+
     {% empty %}
         <div class="ml-5 mt-3 d-flex book-container">
             <div>
@@ -35,5 +21,9 @@
             </div>
         </div>
     {% endfor %}
+
+<small class="ml-5 mt-5" style="height: 150px;">Total results: {{ books.count }}</small>
 </div>
+
+
 {% endblock content %}
