Never code while sick and without tests... Test initialised ;)

--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -1,6 +1,10 @@
 {% load static %}
 <html>
-<link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}"/>
+    <title>
+        Book Worm
+    </title>
+
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}"/>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
