--- a/books/templates/books/search_results.html
+++ b/books/templates/books/search_results.html
@@ -14,7 +14,7 @@
     {% empty %}
         <div class="ml-5 mt-3 d-flex book-container">
             <div>
-                <img height="150" class="book-picture" src="{% static 'images/book_404.jpg' %}">
+                <img height="150" width="100" class="book-picture" src="{% static 'images/book_404.jpg' %}">
             </div>
             <div>
                 There is no book in the database with such search criteria.
@@ -22,7 +22,7 @@
         </div>
     {% endfor %}
 
-<small class="ml-5 mt-5" style="height: 150px;">Total results: {{ books.count }}</small>
+<small class="ml-5 mt-5" style="height: 150px;" id="total_results">Total results: {{ books.count }}</small>
 </div>
 
 
