--- a/books/templates/books/import_from_google.html
+++ b/books/templates/books/import_from_google.html
@@ -3,10 +3,15 @@
 {% load static %}
 {% block content %}
 
+    <div class="d-flex">
+
         <form autocomplete="off"
               class="ml-3 d-flex align-content flex-wrap"
               id="google_search" name="google_search"
-              method="post"
+              hx-post="{% url 'google-search' %}"
+              hx-target="#google_search_results"
+              hx-swap="outerHTML"
+              hx-trigger="submit, input delay:500ms"
         >
             {% csrf_token %}
 
@@ -15,28 +20,9 @@
             <input type="submit" class="hidden-button">
         </form>
 
-    {% for book in google_search_results %}
+    </div>
 
-        <form method="get" action="{% url 'book-create' %}">
-            {% csrf_token %}
-            {% include 'books/book_segment.html' %}
-            <input type="hidden" name="author" value="{{ book.author }}">
-            <input type="hidden" name="title" value="{{ book.title }}">
-            <input type="hidden" name="cover_link" value="{{ book.cover_link }}">
-            <input type="hidden" name="language" value="{{ book.language }}">
-            <input type="hidden" name="pub_date" value="{{ book.pub_date }}">
-            <input type="hidden" name="isbn" value="{{ book.isbn }}">
-            <input type="hidden" name="isbn_10" value="{{ book.isbn_10 }}">
-            <input type="hidden" name="page_count" value="{{ book.page_count }}">
-            <button type="submit" class="mt-2 form-button submit-button">Quick Add</button>
-        </form>
+        {% include 'books/import_from_google_results.html' %}
 
-    {% empty %}
-        <div class="ml-5 mt-3 d-flex book-container">
-            <div>
-                There is no book in the Google database with such search criteria.
-            </div>
-        </div>
-    {% endfor %}
-
+    <script type="text/javascript" src="{% static 'htmx.min.js' %}"></script>
 {% endblock content %}
