--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -15,6 +15,16 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 
     <body>
+
+
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-{{ message.tags }}" style="overflow-x:auto;">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endif %}
+
         {% block content %}
         {% endblock content %}
     </body>
