--- a/books/templates/books/book_segment.html
+++ b/books/templates/books/book_segment.html
@@ -15,7 +15,7 @@
         </div>
 
         <div class="ml-2 book-details">
-            <b>{{ book.title }}</b>
+            <b id="book_{{ book.id }}_title">{{ book.title }}</b>
             <ul class="clean-list">
                 <li id="book_{{ book.id }}_author">
                     {{ book.author }}
