--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -19,14 +19,17 @@
 
         {% if messages %}
             {% for message in messages %}
-                <div class="alert alert-{{ message.tags }}" style="overflow-x:auto;">
+                <div class="alert alert-{{ message.tags }} " style="overflow-x:auto;">
                     {{ message }}
                 </div>
             {% endfor %}
         {% endif %}
+        <div class="col-md-12">
 
-        {% block content %}
-        {% endblock content %}
+            {% block content %}
+            {% endblock content %}
+
+        </div>
     </body>
 
 </html>
