--- a/books/templates/books/book_confirm_delete.html
+++ b/books/templates/books/book_confirm_delete.html
@@ -13,6 +13,7 @@
             </fieldset>
 
             <div class="form-group">
+                <input type="hidden" name="book_data" value="{{ book }}">
                 <button class="form-button delete-button" type="submit" id="confirm_delete">Yes, delete</button>
                 <a href="{% url 'book-update' book.id %}">
                     <input type="button" class="form-button cancel-button" value="Cancel">
