--- a/books/templates/books/import_from_google.html
+++ b/books/templates/books/import_from_google.html
@@ -19,6 +19,11 @@
 
             <input type="submit" class="hidden-button">
         </form>
+    <div>
+        <a href="{% url 'book-list' %}">
+            <img class="image-button mb-2" src="{% static 'images/go_back.png' %}">
+        </a>
+    </div>
 
     </div>
 
